@startuml

title __STEP5_LAMBDA_ANOTHER's Class Diagram__\n

  package step5_lambda_another {
    interface Computation {
        {abstract} + compute()
    }
  }
  

  package step5_lambda_another {
    class IntDifference {
        + compute()
    }
  }
  

  package step5_lambda_another {
    class IntProduct {
        + compute()
    }
  }
  

  package step5_lambda_another {
    class IntSum {
        + compute()
    }
  }
  

  package step5_lambda_another {
    class Main {
        {static} + main()
    }
  }
  

  IntDifference -up-|> Computation
  IntProduct -up-|> Computation
  IntSum -up-|> Computation


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
